--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <title>Code Quiz</title>
+</head>
+
+<body>
+    <header>
+        <div class="high-score">View High Scores</div>
+        <div class="timer">Time:</div>
+
+
+    </header>
+    <main>
+        <section>
+            <div class="question">What's your favorite color?</div>
+        </section>
+        <section>
+            <div class="answers">
+                <button class="choice-1"></button>
+                <button class="choice-2"></button>
+                <button class="choice-3"></button>
+                <button class="choice-4"></button>
+            </div>
+            <div class="verify-answer">Answer</div>
+        </section>
+    </main>
+    <script src="./assets/js/script.js"></script>
+</body>
+
+</html>
