created a questions object that contains all the questions and answers, started the ffunction to verify answer

--- a/index.html
+++ b/index.html
@@ -9,27 +9,13 @@
     <title>Code Quiz</title>
 </head>
 
+<!-- make another page for scores -->
+<!-- make a header that holds link to scores on the left and a timer on the right -->
+
 <body>
-    <header>
-        <div class="high-score">View High Scores</div>
-        <div class="timer">Time:</div>
 
-
-    </header>
-    <main>
-        <section>
-            <div class="question">What's your favorite color?</div>
-        </section>
-        <section>
-            <div class="answers">
-                <button class="choice-1"></button>
-                <button class="choice-2"></button>
-                <button class="choice-3"></button>
-                <button class="choice-4"></button>
-            </div>
-            <div class="verify-answer">Answer</div>
-        </section>
-    </main>
+    <!-- make a div for instructions -->
+    <!-- make a container for the quetsions and answers -->
     <script src="./assets/js/script.js"></script>
 </body>
 
