slow progress on displaying answers on buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <button id="start">Start Quiz</button>
     <container>
         <div id="questions" class="questions"></div>
-        <div id="choices" class="choices"></div>
+        <div id="choices" class="choices">
+            <button id="choiceBtn">A</button>
+            <button id="choiceBtn">B</button>
+            <button id="choiceBtn">C</button>
+            <button id="choiceBtn">D</button>
+        </div>
     </container>
     <button id="save-score">Save Score</button>
     <!-- <script src="./assets/js/questions.js"></script> -->
