progress on looping through questions and answers, also some new code in the verifyAnswer function

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <container>
         <div id="questions" class="questions"></div>
         <div id="choices" class="choices">
-            <button id="choiceBtn">A</button>
-            <button id="choiceBtn">B</button>
-            <button id="choiceBtn">C</button>
-            <button id="choiceBtn">D</button>
+            <button class="choice-btn" id="choice-btn-0">A</button>
+            <button class="choice-btn" id="choice-btn-1">B</button>
+            <button class="choice-btn" id="choice-btn-2">C</button>
+            <button class="choice-btn" id="choice-btn-3">D</button>
         </div>
     </container>
     <button id="save-score">Save Score</button>
