all functions working properly

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
 <header>
     <a href=high-scores.html target="_blank">View High Scores</a>
-    <div>Timer</div>
+    <h4>Timer: <span id="timer">125</span></h4>
 </header>
 
 <body>
-    <div id="instructions" class="instructions"></div>
+    <div id="instructions" class="instructions">
+        <h2>the existential dread quiz</h2>
+        <p>here are some questions to ask yourself to initiate an existential crisis.</p>
+    </div>
     <button id="start">Start Quiz</button>
-    <container>
+    <container id="question-container" class="question-container">
         <div id="questions" class="questions"></div>
         <div id="choices" class="choices">
             <button class="choice-btn" id="choice-btn-0">A</button>
@@ -26,7 +29,14 @@
             <button class="choice-btn" id="choice-btn-3">D</button>
         </div>
     </container>
-    <button id="save-score">Save Score</button>
+    <div id="form">
+        <form action="save-score-form" method="post">
+            <label for="initials">Initials:</label>
+            <input type="text" id="initials" name="user-initials">
+            <button type="submit" class="saveInitials" id="save-score">Save score</button>
+        </form>
+    </div>
+
     <!-- <script src="./assets/js/questions.js"></script> -->
     <script src="./assets/js/scripts.js"></script>
 </body>
