saving high scores in an object

--- a/high-scores.html
+++ b/high-scores.html
@@ -13,9 +13,9 @@
 <body>
     <div>
         <h1>High Scores</h1>
-    </div>
+        <ul id="high-scores" class="high-scores"></ul>
 
-    <script src="./assets/js/highscores.js"></script>
+        <script src="./assets/js/highscores.js"></script>
 </body>
 
 </html>
