--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fauna+One&family=Raleway&display=swap" rel="stylesheet">
     <title>Code Quiz</title>
 </head>
 
@@ -19,7 +21,7 @@
         <h2>the existential dread quiz</h2>
         <p>here are some questions to ask yourself to initiate an existential crisis.</p>
     </div>
-    <button id="start">Start Quiz</button>
+    <button id="start" class="start">Start Quiz</button>
     <container id="question-container" class="question-container">
         <div id="questions" class="questions"></div>
         <div id="choices" class="choices">
