--- a/high-scores.html
+++ b/high-scores.html
@@ -6,16 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
 </head>
 
 <body>
+    
     <div>
-        <h1>High Scores</h1>
+        <a href="./index.html">try again</a>
+        <h1>high scores</h1>
         <ul id="high-scores" class="high-scores"></ul>
+    </div>
 
-        <script src="./assets/js/highscores.js"></script>
+    <script src="./assets/js/scripts.js"></script>
 </body>
 
 </html>
