--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header>
     <a href=high-scores.html target="_blank">View High Scores</a>
-    <h4>Timer: <span id="timer">125</span></h4>
+    <h4>Timer: <span id="timer">100</span></h4>
 </header>
 
 <body>
@@ -21,7 +21,7 @@
         <h2>the existential dread quiz</h2>
         <p>here are some questions to ask yourself to initiate an existential crisis.</p>
     </div>
-    <button id="start" class="start">Start Quiz</button>
+    <button id="start" class="start">start quiz</button>
     <container id="question-container" class="question-container">
         <div id="questions" class="questions"></div>
         <div id="choices" class="choices">
@@ -31,15 +31,14 @@
             <button class="choice-btn" id="choice-btn-3">D</button>
         </div>
     </container>
-    <div id="form">
+    <div id="form" class="form">
         <form action="save-score-form" method="post">
-            <label for="initials">Initials:</label>
+            <label for="initials">initials:</label>
             <input type="text" id="initials" name="user-initials">
-            <button type="submit" class="saveInitials" id="save-score">Save score</button>
+            <button type="submit" class="saveInitials" id="save-score">save score</button>
         </form>
     </div>
 
-    <!-- <script src="./assets/js/questions.js"></script> -->
     <script src="./assets/js/scripts.js"></script>
 </body>
 
