working on displaying scores

--- a/high-scores.html
+++ b/high-scores.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    
+
     <div>
         <a href="./index.html">try again</a>
         <h1>high scores</h1>
-        <ul id="high-scores" class="high-scores"></ul>
+        <div id="high-scores" class="high-scores"></div>
     </div>
 
     <script src="./assets/js/scripts.js"></script>
