--- a/high-scores.html
+++ b/high-scores.html
@@ -18,7 +18,7 @@
         <div id="high-scores" class="high-scores"></div>
     </div>
 
-    <script src="./assets/js/scripts.js"></script>
+    <script src="./assets/js/scores.js"></script>
 </body>
 
 </html>
