--- a/high-scores.html
+++ b/high-scores.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fauna+One&family=Raleway&display=swap" rel="stylesheet">
+    <title>high scores</title>
 </head>
 
 <body>
 
     <div>
-        <a href="./index.html">try again</a>
-        <h1>high scores</h1>
-        <div id="high-scores" class="high-scores"></div>
+        <h1>top 10 high scores</h2>
+            <p>(not that it <span class="italicize">means</span> anything)</p>
+            <div id="high-scores" class="high-scores"></div>
     </div>
+
+    <button class="try-again"><a class="try-again-link" href="./index.html">try again?</a></button>
 
     <script src="./assets/js/scores.js"></script>
 </body>
