added more styling, updated readme, added comments to the javascript file

--- a/high-scores.html
+++ b/high-scores.html
@@ -13,11 +13,12 @@
 
 <body>
 
-    <div>
-        <h1>top 10 high scores</h2>
-            <p>(not that it <span class="italicize">means</span> anything)</p>
-            <div id="high-scores" class="high-scores"></div>
-    </div>
+    <header class="high-score-header">
+        <h1>top 10 high scores</h1>
+        <p>(not that it <span class="italicize">means</span> anything)</p>
+    </header>
+
+    <div id="high-scores" class="high-scores"></div>
 
     <button class="try-again"><a class="try-again-link" href="./index.html">try again?</a></button>
 
