--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <h2>the existential dread quiz</h2>
         <p>here are some questions to ask yourself when embarking on an existential crisis.</p>
     </div>
+
     <button id="start" class="start">start quiz</button>
+
     <container id="question-container" class="question-container">
         <div id="questions" class="questions"></div>
         <div id="choices" class="choices">
@@ -31,7 +33,8 @@
             <button class="choice-btn" id="choice-btn-3">D</button>
         </div>
     </container>
-    <div< id="form" class="form">
+
+    <div id="form" class="form">
         <div class="final-score">
             <p>your score is</p>
             <p id="finalScore"></p>
@@ -41,9 +44,9 @@
             <input type="text" id="initials" name="user-initials">
             <button type="submit" class="saveInitials" id="save-score">save score</button>
         </form>
-        </div>
+    </div>
 
-        <script src="./assets/js/scripts.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
