updated title of index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fauna+One&family=Raleway&display=swap" rel="stylesheet">
-    <title>Code Quiz</title>
+    <title>existential questions</title>
 </head>
 
 <header class="questions-header">
